adding item and listing component and works fine

--- a/src/app/core/products/product-listing/product-listing.component.html
+++ b/src/app/core/products/product-listing/product-listing.component.html
@@ -79,18 +79,25 @@
             </div>
             <!-- items -->
             <div class="item-listing__items item-listing--3items">
-               <app-product-item *ngFor="let item of productListArray"  [product]="item" class="item-medium-1"></app-product-item> 
-               
-               
-               <!-- <app-product-item [product]="productListArray[1]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[2]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[3]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[4]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[5]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[6]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[7]" class="item-medium-1"></app-product-item> 
-               <app-product-item [product]="productListArray[8]" class="item-medium-1"></app-product-item>  -->
-   
+               <app-product-item *ngFor='let elem of productListArray' [product]='elem' class="item-medium-1"></app-product-item>
+               <!-- <app-product-item [product]='productListArray[1]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[2]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[3]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[4]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[5]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[6]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[7]' class="item-medium-1"></app-product-item>
+               <app-product-item [product]='productListArray[8]' class="item-medium-1"></app-product-item> -->
+
+
+               <!-- <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item>
+               <app-product-item class="item-medium-1"></app-product-item> -->
             </div>
             <!-- paging -->
             <div class="paging">
