--- a/src/app/core/products/product-item/product-item.component.html
+++ b/src/app/core/products/product-item/product-item.component.html
@@ -1,20 +1,20 @@
 <!-- medium item -->
 
-<div class="item-medium-1__alert">Sale</div>
-<div class="item-medium-1__image image" >
-  <a href="#" class="item-medium-1__action">Add to Cart</a>
-</div>
-<a href="#">
-  <h4>{{product.name}}</h4>
-  <div class="flex-row">
-    <div>
-      <del [innerText]="product.price">$</del>
-      <span class="lable">${{getPrice}}</span>
+    <div *ngIf="product.discount" class="item-medium-1__alert">Sale</div>
+    <div class="item-medium-1__image image" [style.backgroundImage]="'url('+product.imgUrl+')'">
+        <a href="#" class="item-medium-1__action">Add to Cart</a>
     </div>
-  </div>
-</a>
-<div class="crud-actions">
-  <a href="#"><i class="far fa-eye"></i></a>
-  <a href="#"><i class="fas fa-edit"></i></a>
-  <a href="#"><i class="fas fa-trash-alt"></i></a>
-</div>
+    <a href="#">
+        <h4>{{product.name}}</h4>
+        <div class="flex-row">
+            <div>
+                <del *ngIf="product.discount" [innerText]="product.price">$</del>
+                <span class="lable">${{getPrice()}}</span>
+            </div>
+        </div>
+    </a>
+    <div class="crud-actions">
+        <a href="#"><i class="far fa-eye"></i></a>
+        <a href="#"><i class="fas fa-edit"></i></a>
+        <a href="#"><i class="fas fa-trash-alt"></i></a>
+    </div>
