--- a/src/assets/sass/components/_tag.scss
+++ b/src/assets/sass/components/_tag.scss
@@ -1,6 +1,8 @@
 .tags
 {
-    line-height: 2.6rem;
+  display: flex;
+  flex-wrap: wrap;
+    line-height: 1.5rem;
 }
 .tag
 {
@@ -11,7 +13,7 @@
     font-weight: 700;
     text-transform: uppercase;
     font-size: 1.05rem;
-
+    margin-bottom: .8rem;
     &:not(:last-of-type)
     {
         margin-right: .4rem;
