fix font icon error

--- a/src/app/core/products/product-filter/product-filter.component.html
+++ b/src/app/core/products/product-filter/product-filter.component.html
@@ -4,7 +4,8 @@
           <div class="search-box">
               <input class="search-box__input" placeholder="Search..." type="text" name="txt_search" id="">
               <button type="submit" class="search-box__btn">
-                  <i class="fas fa-search"></i>
+                  <!-- <i class="fas fa-search"></i> -->
+                  <fa-icon [icon]="faSearch"></fa-icon>
               </button>
           </div>
           <!-- filter list -->
