--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-header></app-header>
-<app-product-listing></app-product-listing>
+<app-header [recievedProducts]="recievedProducts"></app-header>
+<app-product-listing (newProductAdded)="newProductAdded($event)"></app-product-listing>
