--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,7 +9,10 @@
                     <li class="list__item">
                         <span class="info">
                             <!-- icon -->
-                            <i class="info__icon far fa-dot-circle"></i>
+                            <i class="info__icon far fa-dot-circle">
+                                <fa-icon [icon]="faDotCircle"></fa-icon>
+                            </i>
+                            
                             <!-- info -->
                             <span class="info__data">1234 Street Name, City Name</span>
                         </span>
@@ -17,7 +20,9 @@
                     <li class="list__item">
                         <a href="#" class="info">
                             <!-- icon -->
-                            <i class="info__icon fab fa-whatsapp"></i>
+                            <i class="info__icon fab fa-whatsapp">
+                                <fa-icon [icon]="faWhatsapp"></fa-icon>
+                            </i>
                             <!-- info -->
                             <span class="info__data">123-456-7890</span>
                         </a>
@@ -25,7 +30,9 @@
                     <li class="list__item">
                         <a href="#" class="info">
                             <!-- icon -->
-                            <i class="info__icon far fa-envelope"></i>
+                            <i class="info__icon far fa-envelope">
+                                <fa-icon [icon]="faEvelop"></fa-icon>
+                            </i>
                             <!-- info -->
                             <span class="info__data">mail@domain.com</span>
                         </a>
@@ -36,7 +43,9 @@
                     <li class="list__item">
                         <a href="#" class="link">
                             <!-- icon -->
-                            <i class="link__icon fas fa-angle-right"></i>
+                            <i class="link__icon fas fa-angle-right">
+                                <fa-icon [icon]="faAngelRight"></fa-icon>
+                            </i>
                             <!-- info -->
                             About Us
                         </a>
@@ -44,7 +53,9 @@
                     <li class="list__item">
                         <a href="#" class="link">
                             <!-- icon -->
-                            <i class="link__icon fas fa-angle-right"></i>
+                            <i class="link__icon fas fa-angle-right">
+                                <fa-icon [icon]="faAngelRight"></fa-icon>
+                            </i>
                             <!-- info -->
                             Contact Us
                         </a>
@@ -60,7 +71,9 @@
                                     <img class="flag flag-us" src="" alt="">
                                     English
                                 </a>
-                                <i class="fas fa-angle-down"></i>
+                                <i class="fas fa-angle-down">
+                                    <fa-icon [icon]="faAngelDown"></fa-icon>
+                                </i>
                             </div>
 
                             <!-- items -->
@@ -112,11 +125,15 @@
                 </div>
                 <!-- shopping card dropdown -->
                 <!-- dropdown--opened to open -->
-                <div class="dropdown dropdown--left  ">
+
+                <!-- if the cardIsIpen prop is true ? add the 'dropdown--opend' to the class list -->
+                <div class="dropdown dropdown--left  " [ngClass]="{'dropdown--opened':cardIsOpen}">
                     <!-- header -->
                     <div class="dropdown__header">
-                        <div class="image image--small" style="background-image: url('img/icons/icon-cart-big.svg')">
-                            <div class="notification notification--danger">
+                                                                                                    <!-- on click change the state of cardIsOpen  -->
+                        <div class="image image--small" style="background-image: url('assets/img/cart.png')" (click)="cardIsOpen=!cardIsOpen">
+                            <!-- change the number of baught products -->
+                            <div [innerText]="recievedProducts.length" class="notification notification--danger">
                                 1
                             </div>
                         </div>
@@ -125,45 +142,26 @@
                     <div class="dropdown__body">
                         <!-- items -->
                         <ul class="dropdown__items list list--vr-separator">
-                            <li class="dropdown__item list__item">
+                            <li *ngFor="let product of recievedProducts" class="dropdown__item list__item">
                                 <!-- item small 2 -->
                                 <div class="item-small-1">
                                     <!-- item data -->
                                     <div class="item-small-1__data">
                                         <!-- title -->
-                                        <a href="" class="item-small-1__title">Camera X1000</a>
+                                        <a href="" class="item-small-1__title">{{product.name}} X {{getPrice(product)}}</a>
                                         <!-- price -->
                                         <span class="item-small-1__description">
-                                            1 X $890
+                                            {{dublicatedProduct(product)}} X ${{getPrice(product)}}
                                         </span>
                                     </div>
                                     <!-- item image -->
                                     <div class="item-small-1__image-box">
-                                        <a href="#" class="item-small-1__image image" style="background-image: url('img/products/product-1.jpg')">
+                                        <a href="#" class="item-small-1__image image" style="background-image: url('{{product.imgUrl}}')">
                                         </a>
                                         <a href="#" class="item-small-1__action">
-                                            <i class="fas fa-times"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="dropdown__item list__item">
-                                <div class="item-small-1">
-                                    <!-- item data -->
-                                    <div class="item-small-1__data">
-                                        <!-- title -->
-                                        <a href="" class="item-small-1__title">Camera X2000</a>
-                                        <!-- price -->
-                                        <span class="item-small-1__description">
-                                            2 X $990
-                                        </span>
-                                    </div>
-                                    <!-- item image -->
-                                    <div class="item-small-1__image-box">
-                                        <a href="#" class="item-small-1__image image" style="background-image: url('img/products/product-1.jpg')">
-                                        </a>
-                                        <a href="" class="item-small-1__action">
-                                            <i class="fas fa-times"></i>
+                                            <i class="fas fa-times">
+                                                <fa-icon [icon]="faTimes"></fa-icon>
+                                            </i>
                                         </a>
                                     </div>
                                 </div>
