--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -9,9 +9,7 @@
                     <li class="list__item">
                         <span class="info">
                             <!-- icon -->
-                            <i class="info__icon far fa-dot-circle">
-                                <fa-icon [icon]="faDotCircle"></fa-icon>
-                            </i>
+                            <i class="info__icon far fa-dot-circle"></i>
                             
                             <!-- info -->
                             <span class="info__data">1234 Street Name, City Name</span>
@@ -20,9 +18,7 @@
                     <li class="list__item">
                         <a href="#" class="info">
                             <!-- icon -->
-                            <i class="info__icon fab fa-whatsapp">
-                                <fa-icon [icon]="faWhatsapp"></fa-icon>
-                            </i>
+                            <i class="info__icon fab fa-whatsapp"></i>
                             <!-- info -->
                             <span class="info__data">123-456-7890</span>
                         </a>
@@ -30,9 +26,7 @@
                     <li class="list__item">
                         <a href="#" class="info">
                             <!-- icon -->
-                            <i class="info__icon far fa-envelope">
-                                <fa-icon [icon]="faEvelop"></fa-icon>
-                            </i>
+                            <i class="info__icon far fa-envelope"></i>
                             <!-- info -->
                             <span class="info__data">mail@domain.com</span>
                         </a>
@@ -43,9 +37,7 @@
                     <li class="list__item">
                         <a href="#" class="link">
                             <!-- icon -->
-                            <i class="link__icon fas fa-angle-right">
-                                <fa-icon [icon]="faAngelRight"></fa-icon>
-                            </i>
+                            <i class="link__icon fas fa-angle-right"></i>
                             <!-- info -->
                             About Us
                         </a>
@@ -53,9 +45,7 @@
                     <li class="list__item">
                         <a href="#" class="link">
                             <!-- icon -->
-                            <i class="link__icon fas fa-angle-right">
-                                <fa-icon [icon]="faAngelRight"></fa-icon>
-                            </i>
+                            <i class="link__icon fas fa-angle-right"></i>
                             <!-- info -->
                             Contact Us
                         </a>
@@ -71,9 +61,7 @@
                                     <img class="flag flag-us" src="" alt="">
                                     English
                                 </a>
-                                <i class="fas fa-angle-down">
-                                    <fa-icon [icon]="faAngelDown"></fa-icon>
-                                </i>
+                                <i class="fas fa-angle-down"></i>
                             </div>
 
                             <!-- items -->
@@ -159,9 +147,7 @@
                                         <a href="#" class="item-small-1__image image" style="background-image: url('{{product.imgUrl}}')">
                                         </a>
                                         <a href="#" class="item-small-1__action">
-                                            <i class="fas fa-times">
-                                                <fa-icon [icon]="faTimes"></fa-icon>
-                                            </i>
+                                            <i class="fas fa-times"></i>
                                         </a>
                                     </div>
                                 </div>
