--- a/src/app/core/products/product-item/product-item.component.html
+++ b/src/app/core/products/product-item/product-item.component.html
@@ -36,8 +36,7 @@
         </div>
     </a>
     <div class="crud-actions">
-        <!-- <fa-icon [icon]="faeye"></fa-icon> -->
-        <a href="#"><fa-icon [icon]="faeye"></fa-icon></a>
-        <a href="#"><fa-icon [icon]="faEdit"></fa-icon></a>
-        <a href="#"><fa-icon [icon]="faTrash"></fa-icon></a>
+        <a href="#"><i class="far fa-eye"></i></a>
+        <a href="#"><i class="fas fa-edit"></i></a>
+        <a href="#"><i class="fas fa-trash-alt"></i></a>
     </div>
