--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
 @import './assets/sass/main.scss';
-@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css'
+@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
+@import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
