creating dropdown component

--- a/src/app/shared/drop-down/drop-down.component.html
+++ b/src/app/shared/drop-down/drop-down.component.html
@@ -1,1 +1,15 @@
-<p>drop-down works!</p>
+          <!-- shopping card dropdown -->
+          <!-- dropdown--opened to open -->
+
+          <!-- if the cardIsIpen prop is true ? add the 'dropdown--opend' to the class list -->
+          <div class="dropdown dropdown--left  " [ngClass]="{'dropdown--opened':cardIsOpen}">
+            <!-- header -->
+            <div class="dropdown__header" (click)="cardIsOpen=!cardIsOpen">
+                <!-- this elemetn is used to meke a place to the element container who have the same select name -->
+              <ng-content select=".header"></ng-content>
+            </div>
+            <!-- body -->
+            <div class="dropdown__body">
+              <ng-content select=".body"></ng-content>
+            </div>
+          </div>
