--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -53,19 +53,16 @@
             <!-- languges -->
             <li class="list__item">
               <!-- drop down -->
-              <!-- to oppen dropdown dropdown--opened -->
-              <div class="dropdown ">
-                <!-- header -->
-                <div class="dropdown__header">
+
+              <app-drop-down>
+                <ng-container class="header">
                   <a href="#" class="link">
                     <img class="flag flag-us" src="" alt="">
                     English
                   </a>
                   <i class="fas fa-angle-down"></i>
-                </div>
-
-                <!-- items -->
-                <div class="dropdown__body">
+                </ng-container>
+                <ng-container class="body">
                   <ul class="dropdown__items list">
                     <li class="dropdown__item list__item">
                       <a href="#" class="link">
@@ -86,8 +83,8 @@
                       </a>
                     </li>
                   </ul>
-                </div>
-              </div>
+                </ng-container>
+              </app-drop-down>
             </li>
           </ul>
         </div>
@@ -102,72 +99,75 @@
         <div class="header__user-options">
           <!-- login control -->
           <a href="#" class="link">Login</a>
-          <div class="dropdown">
-            <div class="dropdown__header">
+
+          <app-drop-down>
+            <ng-container class="header">
               <div class="image image--small image--circle"
                 style="background-image: url('assets/img/PersonalImage.png')">
               </div>
-            </div>
-            <div class="dropdown__body">
-
-            </div>
-          </div>
+            </ng-container>
+            <ng-container class="body"></ng-container>
+          </app-drop-down>
+          
           <!-- shopping card dropdown -->
-          <!-- dropdown--opened to open -->
-
-          <!-- if the cardIsIpen prop is true ? add the 'dropdown--opend' to the class list -->
-          <div class="dropdown dropdown--left  " [ngClass]="{'dropdown--opened':cardIsOpen}">
-            <!-- header -->
-            <div class="dropdown__header">
-              <!-- on click change the state of cardIsOpen  -->
-              <div class="image image--small" style="background-image: url('assets/img/cart.png')"
-                (click)="cardIsOpen=!cardIsOpen">
-                <!-- change the number of baught products -->
-                <div [innerText]="recievedProducts.length" class="notification notification--danger">
-                  1
+          <app-drop-down>
+            <!-- the container element used to pass its content to the content element in the app-drop-down component and does not rendered -->
+            <ng-container class="header">
+              <div class="dropdown__header">
+                <!-- on click change the state of cardIsOpen  -->
+                <div class="image image--small" style="background-image: url('assets/img/cart.png')">
+                  <!-- change the number of baught products -->
+                  <div [innerText]="recievedProducts.length" class="notification notification--danger">
+                    1
+                  </div>
                 </div>
               </div>
-            </div>
-            <!-- body -->
-            <div class="dropdown__body">
-              <!-- items -->
-              <ul class="dropdown__items list list--vr-separator">
-                <li *ngFor="let product of recievedProducts" class="dropdown__item list__item">
-                  <!-- item small 2 -->
-                  <div class="item-small-1">
-                    <!-- item data -->
-                    <div class="item-small-1__data">
-                      <!-- title -->
-                      <a href="" class="item-small-1__title">{{product.name}} X {{getPrice(product)}}</a>
-                      <!-- price -->
-                      <span class="item-small-1__description">
-                        {{dublicatedProduct(product)}} X ${{getPrice(product)}}
-                      </span>
+            </ng-container>
+            <ng-container class="body">
+
+              <!-- body -->
+              <div class="dropdown__body">
+                <!-- items -->
+                <ul class="dropdown__items list list--vr-separator">
+                  <li *ngFor="let product of recievedProducts" class="dropdown__item list__item">
+                    <!-- item small 2 -->
+                    <div class="item-small-1">
+                      <!-- item data -->
+                      <div class="item-small-1__data">
+                        <!-- title -->
+                        <a href="" class="item-small-1__title">{{product.name}} X {{getPrice(product)}}</a>
+                        <!-- price -->
+                        <span class="item-small-1__description">
+                          {{dublicatedProduct(product)}} X ${{getPrice(product)}}
+                        </span>
+                      </div>
+                      <!-- item image -->
+                      <div class="item-small-1__image-box">
+                        <a href="#" class="item-small-1__image image"
+                          style="background-image: url('{{product.imgUrl}}')">
+                        </a>
+                        <a href="#" class="item-small-1__action">
+                          <i class="fas fa-times"></i>
+                        </a>
+                      </div>
                     </div>
-                    <!-- item image -->
-                    <div class="item-small-1__image-box">
-                      <a href="#" class="item-small-1__image image" style="background-image: url('{{product.imgUrl}}')">
-                      </a>
-                      <a href="#" class="item-small-1__action">
-                        <i class="fas fa-times"></i>
-                      </a>
-                    </div>
-                  </div>
-                </li>
-              </ul>
-              <!-- totals -->
-              <div class="separator"></div>
-              <div class="block">
-                <span class="lable">Total:</span>
-                <span class="lable">$2870</span>
+                  </li>
+                </ul>
+                <!-- totals -->
+                <div class="separator"></div>
+                <div class="block">
+                  <span class="lable">Total:</span>
+                  <span class="lable">$2870</span>
+                </div>
+                <!-- actions -->
+                <div class="block list list--hr">
+                  <a class="list-item btn btn--gray" href="">View Cart</a>
+                  <a class="list-item btn btn--primary" href="">Checkout</a>
+                </div>
               </div>
-              <!-- actions -->
-              <div class="block list list--hr">
-                <a class="list-item btn btn--gray" href="">View Cart</a>
-                <a class="list-item btn btn--primary" href="">Checkout</a>
-              </div>
-            </div>
-          </div>
+            </ng-container>
+          </app-drop-down>
+
         </div>
       </div>
       <!-- lower header -->
