--- a/src/app/core/products/product-item/product-item.component.html
+++ b/src/app/core/products/product-item/product-item.component.html
@@ -38,5 +38,5 @@
     <div class="crud-actions">
         <a href="#"><i class="far fa-eye"></i></a>
         <a href="#"><i class="fas fa-edit"></i></a>
-        <a href="#"><i class="fas fa-trash-alt"></i></a>
+        <a href="#" (click)="deleteProduct(product.id)"><i class="fas fa-trash-alt"></i></a>
     </div>
