--- a/src/app/core/products/product-filter/product-filter.component.html
+++ b/src/app/core/products/product-filter/product-filter.component.html
@@ -2,7 +2,7 @@
 
           <!-- search box -->
           <div class="search-box">
-              <input class="search-box__input" placeholder="Search..." type="text" name="txt_search" id="">
+              <input #searchElem (input)="filterProductList($event)" class="search-box__input" placeholder="Search..." type="text" name="txt_search" id="">
               <button type="submit" class="search-box__btn">
                   <i class="fas fa-search"></i>
                   <!-- <fa-icon [icon]="faSearch"></fa-icon> -->
