add new components and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
+<!-- <app-test></app-test> -->
 <app-header ></app-header>
-<app-product-listing  [pageSize]="pageSize"></app-product-listing>
+<!-- <app-product-listing  [pageSize]="pageSize"></app-product-listing> -->
+<!-- <app-add-product></app-add-product> -->
+<router-outlet></router-outlet>
