--- a/src/app/core/products/product-listing/product-listing.component.html
+++ b/src/app/core/products/product-listing/product-listing.component.html
@@ -1,34 +1,34 @@
 <!-- @Hassan-Gaad -->
 <!-- Listing Items -->
-    <div class="container">
+<div class="container">
 
-      <section class="filters">
-        <app-product-filter></app-product-filter>
-      </section>
-      <!-- Items -->
-      <section class="item-listing">
-        <!-- tools (sorting , change view , exporting) -->
-        <div class="item-listing__tools">
-          <select class="form-control" name="" id="">
-            <option value="1">Featured</option>
-            <option value="2">Price low to high</option>
-            <option value="3">Price high to low</option>
-            <option value="4">Name</option>
-          </select>
-          <a class="action-btn" href="#">
-            <i class="fas fa-plus"></i>
-          </a>
-        </div>
-        <!-- items -->
-        <div class="item-listing__items item-listing--3items">
-          <!-- also product still can be accessed here cause of its within it's component -->
-          
-          <!-- once the productAdded event fired in the app-product-item it wil call the callback function in the parent -->
-          <app-product-item  *ngFor='let elem of productListTobeViewed' [product]='elem' class="item-medium-1">
+  <section class="filters">
+    <app-product-filter></app-product-filter>
+  </section>
+  <!-- Items -->
+  <section class="item-listing">
+    <!-- tools (sorting , change view , exporting) -->
+    <div class="item-listing__tools">
+      <select class="form-control" name="" id="">
+        <option value="1">Featured</option>
+        <option value="2">Price low to high</option>
+        <option value="3">Price high to low</option>
+        <option value="4">Name</option>
+      </select>
+      <a class="action-btn" [routerLink]="['/add-product']">
+        <i class="fas fa-plus"></i>
+      </a>
+    </div>
+    <!-- items -->
+    <div class="item-listing__items item-listing--3items">
+      <!-- also product still can be accessed here cause of its within it's component -->
 
-          <!-- <app-product-item (productAdded)="newProductAddedToCart($event)" *ngFor='let elem of productListTobeViewed ,let i=index' [product]='elem' (click)="onPageination(i)" class="item-medium-1"> -->
-          </app-product-item>
-          <!-- <app-product-item [product]='productListArray[1]' class="item-medium-1"></app-product-item>
+      <!-- once the productAdded event fired in the app-product-item it wil call the callback function in the parent -->
+      <app-product-item *ngFor='let elem of productListTobeViewed' [product]='elem' class="item-medium-1">
+
+        <!-- <app-product-item (productAdded)="newProductAddedToCart($event)" *ngFor='let elem of productListTobeViewed ,let i=index' [product]='elem' (click)="onPageination(i)" class="item-medium-1"> -->
+      </app-product-item>
+      <!-- <app-product-item [product]='productListArray[1]' class="item-medium-1"></app-product-item>
                <app-product-item [product]='productListArray[2]' class="item-medium-1"></app-product-item>
                <app-product-item [product]='productListArray[3]' class="item-medium-1"></app-product-item>
                <app-product-item [product]='productListArray[4]' class="item-medium-1"></app-product-item>
@@ -38,7 +38,7 @@
                <app-product-item [product]='productListArray[8]' class="item-medium-1"></app-product-item> -->
 
 
-          <!-- <app-product-item class="item-medium-1"></app-product-item>
+      <!-- <app-product-item class="item-medium-1"></app-product-item>
                <app-product-item class="item-medium-1"></app-product-item>
                <app-product-item class="item-medium-1"></app-product-item>
                <app-product-item class="item-medium-1"></app-product-item>
@@ -46,22 +46,23 @@
                <app-product-item class="item-medium-1"></app-product-item>
                <app-product-item class="item-medium-1"></app-product-item>
                <app-product-item class="item-medium-1"></app-product-item> -->
-        </div>
-        <!-- paging -->
-        <div class="paging">
-          <!-- left arrow -->
-          <div class="paging__arrow" (click)="onPageination(currentPage-1)">
-            <i class="fas fa-angle-left"></i>
-          </div>
-          <!-- page number -->
-          <!-- create paginations and pass the calculated no of pages that come from the class -->
-          <!--  *ngFor='let elem of productListTobeViewed ,let i=index' [product]='elem' (click)="onPageination(i)" -->
-          <div class="paging__number" *ngFor="let elem of noOfPages, let i=index" (click)="onPageination(i)" [ngClass]="{'active':currentPage==i}" >{{elem}}</div>
-
-          <!-- right arrow -->
-          <div class="paging__arrow" (click)="onPageination(currentPage+1)">
-            <i class="fas fa-angle-right"></i>
-          </div>
-        </div>
-      </section>
     </div>
+    <!-- paging -->
+    <div class="paging">
+      <!-- left arrow -->
+      <div class="paging__arrow" (click)="onPageination(currentPage-1)">
+        <i class="fas fa-angle-left"></i>
+      </div>
+      <!-- page number -->
+      <!-- create paginations and pass the calculated no of pages that come from the class -->
+      <!--  *ngFor='let elem of productListTobeViewed ,let i=index' [product]='elem' (click)="onPageination(i)" -->
+      <div class="paging__number" *ngFor="let elem of noOfPages, let i=index" (click)="onPageination(i)"
+        [ngClass]="{'active':currentPage==i}">{{elem}}</div>
+
+      <!-- right arrow -->
+      <div class="paging__arrow" (click)="onPageination(currentPage+1)">
+        <i class="fas fa-angle-right"></i>
+      </div>
+    </div>
+  </section>
+</div>
