--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -177,7 +177,7 @@
           <ul class="nav__items list list--hr">
             <!-- items -->
             <li class="nav__item">
-              <a class="nav__link" href="#">Home</a>
+              <a class="nav__link" routerLink="/home">Home</a>
             </li>
             <li class="nav__item dropdown ">
               <!-- title -->
@@ -188,10 +188,11 @@
               <div class="dropdown__body">
                 <ul class=" list">
                   <li class="list__item">
-                    <a class="nav__inner-link" href="#">Product Listing</a>
+                    <a class="nav__inner-link" routerLink="home">Product Listing</a>
                   </li>
                   <li class="list__item">
-                    <a class="nav__inner-link" href="#">Add Product</a>
+                                                              <!-- path segment you like -->
+                    <a class="nav__inner-link" routerLink="/add-product">Add Product</a>
                   </li>
                 </ul>
               </div>
